--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -10,7 +10,7 @@
                 <a id="sideMenu"><img src="/assets/images/icon1.png"></a>
               </div>
               <div class="col-9 p-0">
-                <span class="all_event_name"> Hello Rao Info Tech </span>
+                <span class="all_event_name"> Hello {{userName}} </span>
               </div>
             </div>
           </div>
