--- a/src/app/my-event/my-event.component.html
+++ b/src/app/my-event/my-event.component.html
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="overlay" class="new_event_menu_box" style="display: none;">
+                    <!-- <div id="overlay" class="new_event_menu_box" style="display: none;">
                         <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
                             <a class="text-white "><img src="/assets/images/overlay.png">
                                 <p>Collections</p>
@@ -92,7 +92,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="evet_sliding">
                         <div class="event_slider1">
                             <div class="slide1" *ngFor="let item of myEvent">
@@ -165,8 +165,8 @@
                             </div>
                             <p class="text-white text-center">Collected</p>
                         </div>
-                        <div class="collect1_img" *ngFor="let item of myEvent">
-                            <div class="collect_img" (click)="editEvent(item._id,'seventhStep', 'secondStep')">
+                        <div class="collect1_img" *ngIf="eventId">
+                            <div class="collect_img" (click)="editEvent(eventId,'seventhStep', 'secondStep')">
                                 <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
                             </div>
@@ -205,7 +205,7 @@
                 </div>
             </div>
         </div>
-        <div id="overlay" class="new_event_menu_box" style="display: none;">
+        <!-- <div id="overlay" class="new_event_menu_box" style="display: none;">
             <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
                 <a class="text-white "><img src="/assets/images/overlay.png">
                     <p>Collections</p>
@@ -227,7 +227,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
 </div>
 
@@ -268,16 +268,24 @@
                             <img src="/assets/images/event_adding.png">
                         </div>
                     </div>
-                    <div class="event_button" *ngFor="let item of selectedActivityGroup">
-                        <button class="eventC_btn">{{item.groupName}}</button>
-                    </div>
-                    <div class="eventC_gendar">
-                        <input type="radio" id="male" name="radio-group">
-                        <label for="male">Male</label>
-                        <input type="radio" name="radio-group" id="female">
-                        <label for="female">Female</label>
-                    </div>
-                    <div class="eventC_item" *ngFor="let name of itemNamePrint">
+                    <div class="row pl-5">
+                        <div class="col-12">         
+                            <div class="event_button" *ngFor="let item of selectedActivityGroup;">
+                                <button class="eventC_btn" (click)="handleChange(item)">{{item.groupName}}</button>
+                                <!-- <input type="radio" id="{{i}}"  name="radio-group" (change)="handleChange(item)"> -->
+                                <!-- <label for="{{i}}">{{item.groupName}}</label> -->
+                            </div>
+                            </div>
+                            <div class="col-3">
+                                <input type="radio" id="test" value="male" name="radio-group1" checked>
+                                <label for="test">Male</label>
+                            </div>
+                            <div class="col-3">
+                                <input type="radio" id="test5" value="female" name="radio-group1">
+                                <label for="test5">Female</label>
+                            </div>
+                        </div>
+                    <div class="eventC_item" *ngFor="let name of itemNamePrint;">
                         <div class="row">
                             <div class="col-12">
                                 <div class="">
@@ -352,29 +360,6 @@
                 </div>
             </div>
         </div>
-        <div id="overlay" class="new_event_menu_box" style="display: none;">
-            <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
-                <a class="text-white "><img src="/assets/images/overlay.png">
-                    <p>Collections</p>
-                </a>
-            </div>
-            <div class="">
-                <div class="event_menu">
-                    <div class="all_menu_content  d-flex flex-wrap align-content-center">
-                        <ul>
-                            <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
-                            <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
-                            </li>
-                            <li><a routerLink="/bankDetails" class="text-white my_account">bank
-                                    account</a></li>
-                            <li><a routerLink="/reset-password" class="text-white my_account">Reset
-                                    Password</a></li>
-                            <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
 </div>
 
@@ -397,7 +382,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="overlay" class="new_event_menu_box" style="display: none;">
+                    <!-- <div id="overlay" class="new_event_menu_box" style="display: none;">
                         <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
                             <a class="text-white "><img src="/assets/images/overlay.png">
                                 <p>Collections</p>
@@ -419,7 +404,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="evet_sliding">
                         <div class="event_slider1">
                             <div class="slide1" *ngFor="let item of myEvent">
@@ -532,7 +517,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="overlay" class="new_event_menu_box" style="display: none;">
+                    <!-- <div id="overlay" class="new_event_menu_box" style="display: none;">
                         <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
                             <a class="text-white "><img src="/assets/images/overlay.png">
                                 <p>Collections</p>
@@ -554,7 +539,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="event_guest text-center m-2">
                         <img src="/assets/images/eventE_close.png">
                         <span>Guests invited</span>
@@ -658,7 +643,7 @@
                 <div class="Join_inner_content_box">
                     <div class="all_event_sec">
                         <div class="row">
-                            <div class="col-3 m-auto pr-0 float-right new_event_menu"> 
+                            <div class="col-3 m-auto pr-0 float-right new_event_menu">
                                 <a><img src="/assets/images/eventF_icon.png">
                                     <p class="text-white">New Event</p>
                                 </a>
@@ -668,7 +653,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="overlay" class="new_event_menu_box" style="display: none;">
+                    <!-- <div id="overlay" class="new_event_menu_box" style="display: none;">
                         <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
                             <a class="text-white "><img src="/assets/images/overlay.png">
                                 <p>Collections</p>
@@ -690,7 +675,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="evet_sliding">
                         <div class="event_slider1">
                             <div class="slide1" *ngFor="let item of myEvent">
@@ -814,25 +799,25 @@
 
 <!-- Edit Event Slide -->
 <div class="seventhStep" style="display:none">
-<section class="edit_event_section d-flex flex-wrap align-content-center">
-    <div class="container-fluid">
-        <h3 class="text-center">Aso Ebi</h3>
-        <div class="edit_event">
-            <div class="event_inner_content_box">
-                <div class="event_inner_content ">
-                    <div class="new_event_sec edit_event_new">
-                        <div class="row">
-                            <div class="col-3 m-auto pr-0 float-right new_event_menu">
-                                <a><img src="/assets/images/edit_event_icon.png">
-                                    <p class="text-white">New Event</p>
-                                </a>
-                            </div>
-                            <div class="col-9 p-0">
-                                <span class="text-white event_name"> Hello Rao Info Tech </span>
+    <section class="edit_event_section d-flex flex-wrap align-content-center">
+        <div class="container-fluid">
+            <h3 class="text-center">Aso Ebi</h3>
+            <div class="edit_event">
+                <div class="event_inner_content_box">
+                    <div class="event_inner_content ">
+                        <div class="new_event_sec edit_event_new">
+                            <div class="row">
+                                <div class="col-3 m-auto pr-0 float-right new_event_menu">
+                                    <a><img src="/assets/images/edit_event_icon.png">
+                                        <p class="text-white">New Event</p>
+                                    </a>
+                                </div>
+                                <div class="col-9 p-0">
+                                    <span class="text-white event_name"> Hello Rao Info Tech </span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div id="overlay" class="new_event_menu_box" style="display: none;">
+                        <!-- <div id="overlay" class="new_event_menu_box" style="display: none;">
                         <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
                             <a class="text-white "><img src="/assets/images/overlay.png">
                                 <p>Collections</p>
@@ -854,28 +839,54 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="enter_event_title">
-                        <h6 class="text-center text-white">Event Hashtag</h6>
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="text" class="form-control" id="title" [(ngModel)]="eventHashtag" placeholder="# Enter your event hashtag here.." name="title">
+                    </div> -->
+                        <div *ngIf="singleEventDetails">
+                            <div class="enter_event_title">
+                                <h6 class="text-center text-white">Event Hashtag</h6>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" id="title" [(ngModel)]="eventHashtag"
+                                            placeholder="# Enter your event hashtag here.." name="title">
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="edit_event_btn">
-                        <div class="row">
-                            <div class="col-sm-6 col-xs-12 edit_info" (click)="editEventDeatils(eventId)" [(ngModel)]="eventId">
-                                <a  class="edit_btn text-white  text-center">Edit Information </a>
-                            </div>
-                            <div class="col-sm-6 delete_info col-xs-12" (click)="deleteEvent(eventId)" [(ngModel)]="eventId">
-                                <a  class="delete_event_btn text-center">Delete Event</a>
+                            <div class="edit_event_btn">
+                                <div class="row">
+                                    <div class="col-sm-6 col-xs-12 edit_info"
+                                        (click)="editEventDeatils(singleEventDetails._id)">
+                                        <a class="edit_btn text-white  text-center">Edit Information </a>
+                                    </div>
+                                    <div class="col-sm-6 delete_info col-xs-12"
+                                        (click)="deleteEvent(singleEventDetails._id)">
+                                        <a class="delete_event_btn text-center">Delete Event</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </section>
+</div>
+
+
+<div id="overlay" class="new_event_menu_box" style="display: none;">
+    <div class="">
+        <div class="event_menu">
+            <div class="all_menu_content  d-flex flex-wrap align-content-center">
+                <ul>
+                    <li><a routerLink="/home" class="text-white new_event">Home</a></li>
+                    <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
+                    <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
+                    </li>
+                    <li><a routerLink="/bankDetails" class="text-white my_account">bank
+                            account</a></li>
+                    <li><a routerLink="/reset-password" class="text-white my_account">Reset
+                            Password</a></li>
+                    <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
-</section>
 </div>
