sign up page and event menu page responsive

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -21,36 +21,36 @@
     color: #201f62;
     margin-top: -78px;
     margin-bottom: 18px;
-} */
+    } */
 
 
 
 
 
-.modal-content{
-    background-image: url('/assets/images/join1.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-   }
-   .modal_content{
+    .modal-content{
+      background-image: url('/assets/images/join1.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+    .modal_content{
       padding: 20px;
-   }
-   .forgot_password_form{
+    }
+    .forgot_password_form{
       margin: 20px 0;
-   }
-   .forgot_password_form input{
+    }
+    .forgot_password_form input{
       background-color: transparent;
       color: #000;
       height: 50px;
       border-radius: 0px!important;
       font-size: 30px;
-   }
-   .forgot_password_form  input::-webkit-input-placeholder {
+    }
+    .forgot_password_form  input::-webkit-input-placeholder {
       color: #000!important;
       font-size: 30px!important;
-   }
-   .submit_mail button{
+    }
+    .submit_mail button{
       font-size: 35.83px;
       height: 50px;
       width: 100%;
@@ -58,4 +58,21 @@
       line-height: 52px;
       border: none;
       color: #fff;
-   }
+    }
+
+    @media(max-width: 575px){
+      /*forgot password modal css start*/
+      .submit_mail button {
+        font-size: 28.83px;
+        height: 45px;
+      }
+      .forgot_password_form  input::-webkit-input-placeholder {
+        color: #000!important;
+        font-size: 25px!important;
+      }
+      .forgot_password_form input{
+        height: 45px;
+        font-size: 25px;
+      }
+      /*forgot password modal css end*/
+    }
