--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -14,28 +14,22 @@
               </div>
             </div>
           </div>
-          <div class="slider_menu">
-            <div class="event_btns">
-              <ul>
-                <li><a routerLink="myEvent" class="text-white text-center new_event">my event</a></li>
-                <li><a routerLink="createEvent" class="text-white text-center my_event">new event</a></li>
-                <li><a routerLink="bankDetails" class="text-white text-center my_account">bank account</a>
-                </li>
-              </ul>
-            </div>
-            <div class="event_btns1">
-              <ul>
-                <li><a routerLink="reset-password" class="text-white text-center my_account">Reset
-                    Password</a></li>
-                <li><a (click)="logout()" class="text-white text-center my_account">Logout</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="msg_slug">
-            <p>Messages Collections</p>
+          <div class="first_event_menu_start">
+            <div class="event_menu_start">
+             <ul>
+              <li><a routerLink="myEvent" class="text-white text-center new_event">my event</a></li>
+              <li><a routerLink="createEvent" class="text-white text-center my_event">new event</a></li>
+              <li><a routerLink="bankDetails" class="text-white text-center my_account">bank account</a>
+              </li>
+              <li><a routerLink="reset-password" class="text-white text-center my_account">Reset
+              Password</a></li>
+              <li><a (click)="logout()" class="text-white text-center my_account">Logout</a></li>
+              <li><a href="#" class="text-white text-center my_messages">Messages</a></li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 </div>
